# jobsyspolice

./: .env  Cargo.toml  Makefile  README.md  jspgo.csh  jspsudoers  jstemplate.dot  setup.bash  setup.tcsh
examples/: error.jspt  features.jspt  jsptemplate.jspt  root.jspt  template.jspt
src/: cachedaliases.rs  cachedenvvars.rs  cli.rs  constants.rs  disk.rs  diskutils.rs  entrytype.rs  errors.rs  find.rs  graph.rs  jspt.rs  lib.rs  main.rs  metadata.rs  minimatch.rs  navalias.rs  node.rs  nodepath.rs  nodetype.rs  perms.rs  regexp.rs  report.rs  returnvalue.rs  searchterm.rs  shell.rs  user.rs  valid.rs  validpath.rs  volume.rs
src/disk/: gx.rs  local.rs  searchterm.rs
src/jspt/: components.rs  console.rs  errors.rs  helpers.rs  loader.rs  main.rs  parser.rs  statemachine.rs
src/jspt/components/: edge.rs  header.rs  metadata.rs  node.rs  regex.rs
src/jspt/parser/: comment.rs  edge.rs  empty.rs  header.rs  metadata.rs  node.rs  regex.rs
src/shell/: bash.rs  tcsh.rs
