[package]
name = "jsp"
version = "0.16.0"
authors = ["jonathan gerber <jlgerber@gmail.com>"]
edition = "2018"

[dependencies]
regex = "1.1.6"
petgraph = { version = "0.4.13", features = ["serde-1"] }
log = "0.4.6"
fern = { version = "0.5.8", features = ["colored"] }
structopt = "0.2.15"
chrono = "0.4.6"
serde = { version = "1.0.91", features = ["derive"] }
serde_json = "1.0.39"
serde_regex = "0.3.1"
dotenv = "0.14.1"
shellexpand = "1.0.0"
ascii = "0.9.1"
xnixperms = { git = "https://github.com/jlgerber/xnixperms.git" }
failure = "0.1.5"
