[package]
name = "jsp"
version = "0.39.0"
authors = ["jonathan gerber <jlgerber@gmail.com>"]
edition = "2018"

[dependencies]
petgraph = { version = "0.4.13", features = ["serde-1"] }
log = "0.4.6"
fern = { version = "0.5.8", features = ["colored"] }
structopt = "0.2.16"
chrono = "0.4.6"
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.39"
serde_regex = "0.4.0"
dotenv = "0.14.1"
shellexpand = "1.0.0"
ascii = "0.9.1"
xnixperms = { git = "https://github.com/jlgerber/xnixperms.git" }
failure = "0.1.5"
lazy_static = "1.3.0"
nix = "0.14.1"
users = "0.9.1"
#shellfn = "0.1.1"
colored = "1.8.0"
nom = "5.0.0"
ext_regex = {package = "regex", version = "1.1.7"}


[dependencies.levelspecter]
git = "https://github.com/jlgerber/levelspecter.git"
features = ["case-insensitive"]


[dev-dependencies]
env_logger = "0.6.1"
